# charteado

./: .gitignore  CMakeLists.txt
include/charteado/: chatils.h  histograms.h
samples/: histogramas.cpp
